@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          dzil clean now has has a "dry run" option.
 
 4.300014  2012-04-05 12:46:33 America/New_York
           added the CPANFile plugin to create "cpanfile" prereq format
